Improve repo structure

--- a/.env.sample
+++ b/.env.sample
@@ -49,8 +49,12 @@ PPT_AUTO_BACKUP=true
 PPT_BACKUP_DIR=./presentations/backups
 
 # ============================================
-# MCP SERVER SETTINGS
+# MCP SERVER SETTINGS (pptx-mcp)
 # ============================================
+
+# PPTX MCP Server Host and Port
+PPTX_HOST=127.0.0.1
+PPTX_PORT=8000
 
 # MCP server timeout in milliseconds
 MCP_TIMEOUT=30000
@@ -62,8 +66,9 @@ MCP_RETRY_ATTEMPTS=3
 # Options: debug, info, warning, error
 MCP_LOG_LEVEL=info
 
-# MCP server port (if running standalone)
-MCP_SERVER_PORT=5000
+# LibreOffice path (if not in system PATH)
+# Required for slide image generation
+# LIBREOFFICE_PATH=/usr/bin/libreoffice
 
 # ============================================
 # CLAUDE CODE SETTINGS
